<resources>
    <string name="app_name">Reservas</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="spinner">
        <item>Elegir...</item>
        <item>Bizkaia</item>
        <item>Gipuzkoa</item>
        <item>Araba/Álava</item>


    </string-array>
    <string-array name="spinner2">
        <item>Elegir...</item>
        <item>Albergues</item>
        <item>Agroturismos</item>
        <item>Casas Rurales</item>
        <item>Campings</item>


    </string-array>
    <string name="title_activity_maps2">Map</string>
    <string name="provincia">Hello World!</string>

    <string name="Tipo">Tipo</string>
    <string name="capacidad">Capacidad</string>
    <string name="filtrar">FILTRAR</string>
    <string name="telefono">Teléfono:</string>
    <string name="reservar">RESERVAR</string>


    //DESDE AQUI LOGIN
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="registrar">REGISTRAR</string>
    <string name="login">ACCEDER</string>
    //DESDE REGISTRO

    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nac">Nacimineto</string>

    //DESDE AdapterAloj
    <string name="provinciaa">Provincia:</string>
    <string name="direccion">Dirección:</string>

    /DESDE Mimenu
    <string name="misReserv">Mis Reservas</string>

    //DESDE Activity reserva
    <string name="detalles">DETALLES DE LA RESERVA</string>
    <string name="aloj">Alojamiento:</string>
    <string name="fechaE">Fecha de entrada:</string>
    <string name="fechaS">Fecha de salida:</string>
    <string name="sobre">Sobre el alojamiento:</string>

</resources>
